--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,6 @@ issues = "https://github.com/ryanjjung/marknow/issues"
 dev = [
     "ruff>=0.11,<1"
 ]
+
+[project.scripts]
+marknow = "marknow:main"
